kubernetes-networks/dns-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: external-dns
  labels:
    app: external-dns
  name: kube-dns-lb-tcp
  namespace: kube-system
spec:
  ports:
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: 53
  - name: metrics
    port: 9153
    protocol: TCP
    targetPort: 9153
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
  loadBalancerIP: 192.168.1.124

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: external-dns
  labels:
    app: external-dns
  name: kube-dns-lb-udp
  namespace: kube-system
spec:
  ports:
  - name: dns
    port: 53
    protocol: UDP
    targetPort: 53
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
  loadBalancerIP: 192.168.1.124
