kubernetes-networks/web-ingress-canary.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-host-canary
  namespace: canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/custom-http-errors: 401,402,403,404,502
    nginx.ingress.kubernetes.io/default-backend: nginx-errors
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
spec:
  rules:
  - host: web
    http:
      paths:
      - path: /
        backend:
          serviceName: web-svc
          servicePort: 8000
